--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -1,17 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'static/css/bootstrap.css' %}">
 </head>
-<body>
-    <p>LISTA DE PRODUTOS ----------------</p>
-    <a href="{% url 'adicionar' %}"><button type="submit">Adicionar</button></a>
-    {% for produto in data %}
-        <p>{{  produto.produto }} | {{  produto.descricao }}</p>
-        <a href="{% url 'deletar' produto.id %}" method="POST"><button type="submit">DELETAR</button></a>
-        <a href="{% url 'atualizar' produto.id %}"><button type="submit">ATUALIZAR</button></a>
-    {% endfor %}
+<body class="container">
+    
+    <h1 class="text-center">Gestão de Produtos</h1>
+    <div id="mensagemView"></div>
+    <br>
+    <br>
+    <div id="produtos">
+        <a href="{% url 'adicionar' %}"><button type="submit" class="btn btn-primary">Adicionar</button></a>
+        <table class="table table-hover table-bordered" style="margin-top: 10px;">
+            <thead>
+                <tr>
+                    <th>PRODUTO</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for produto in data %}
+                    <tr>
+                        <td><b>{{  produto.produto }}</b> | {{  produto.descricao }}
+                            <a href="{% url 'detalhes' produto.id %}" method="POST"><button type="submit" class="btn btn-primary" style="float: right;">Detalhes</button></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>    
+    </div>
 </body>
 </html>
